// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`createInitialMerkleTree 1`] = `{}`;

exports[`diffMerkleTrees > diff for initialMerkleTree and mt1 1`] = `
{
  "_id": "Option",
  "_tag": "Some",
  "value": 0,
}
`;

exports[`diffMerkleTrees > diff for mt1 and initialMerkleTree 1`] = `
{
  "_id": "Option",
  "_tag": "Some",
  "value": 0,
}
`;

exports[`diffMerkleTrees > diff for two initial Merkle Trees 1`] = `
{
  "_id": "Option",
  "_tag": "None",
}
`;

exports[`diffMerkleTrees > find the most recent time when trees were the same 1`] = `
{
  "_id": "Option",
  "_tag": "Some",
  "value": 561439380000,
}
`;

exports[`diffMerkleTrees > find the most recent time when trees were the same 2`] = `
{
  "_id": "Option",
  "_tag": "Some",
  "value": 1612639380000,
}
`;

exports[`diffMerkleTrees > minute window 1`] = `
{
  "_id": "Option",
  "_tag": "Some",
  "value": 0,
}
`;

exports[`diffMerkleTrees > minute window 2`] = `
{
  "_id": "Option",
  "_tag": "Some",
  "value": 60000,
}
`;

exports[`insertIntoMerkleTree > node1TimestampStart 1`] = `
{
  "0": {
    "hash": -1416139081,
  },
  "hash": -1416139081,
}
`;

exports[`insertIntoMerkleTree > node1TimestampStart then node2Timestamp2022 1`] = `
{
  "0": {
    "hash": -1416139081,
  },
  "1": {
    "2": {
      "2": {
        "0": {
          "2": {
            "2": {
              "1": {
                "2": {
                  "2": {
                    "2": {
                      "0": {
                        "0": {
                          "1": {
                            "1": {
                              "2": {
                                "0": {
                                  "hash": 2082172820,
                                },
                                "hash": 2082172820,
                              },
                              "hash": 2082172820,
                            },
                            "hash": 2082172820,
                          },
                          "hash": 2082172820,
                        },
                        "hash": 2082172820,
                      },
                      "hash": 2082172820,
                    },
                    "hash": 2082172820,
                  },
                  "hash": 2082172820,
                },
                "hash": 2082172820,
              },
              "hash": 2082172820,
            },
            "hash": 2082172820,
          },
          "hash": 2082172820,
        },
        "hash": 2082172820,
      },
      "hash": 2082172820,
    },
    "hash": 2082172820,
  },
  "hash": -678690525,
}
`;

exports[`insertIntoMerkleTree > node2Timestamp2022 1`] = `
{
  "1": {
    "2": {
      "2": {
        "0": {
          "2": {
            "2": {
              "1": {
                "2": {
                  "2": {
                    "2": {
                      "0": {
                        "0": {
                          "1": {
                            "1": {
                              "2": {
                                "0": {
                                  "hash": 2082172820,
                                },
                                "hash": 2082172820,
                              },
                              "hash": 2082172820,
                            },
                            "hash": 2082172820,
                          },
                          "hash": 2082172820,
                        },
                        "hash": 2082172820,
                      },
                      "hash": 2082172820,
                    },
                    "hash": 2082172820,
                  },
                  "hash": 2082172820,
                },
                "hash": 2082172820,
              },
              "hash": 2082172820,
            },
            "hash": 2082172820,
          },
          "hash": 2082172820,
        },
        "hash": 2082172820,
      },
      "hash": 2082172820,
    },
    "hash": 2082172820,
  },
  "hash": 2082172820,
}
`;
